CHANGES.txt - 2007-04-25
------------------------

CHANGES IN CUPS V1.3

	- Documentation updates (STR #1775, STR #2130, STR #2131)
        - Add new cupsArrayNew2() API to support hashed lookups
          of array elements (STR #2358)
        - ppdConflicts() optimizations (STR #2358)
	- The cupstestppd program now tests for existing filters,
	  icons, profiles, and dialog extensions (STR #2326)
	- The web interface no longer lists new printers on the
	  main administration page.  Instead, a new "List Available
	  Printers" button is provided that shows a separate page
	  with the list of printers.
	- The web interface now supports setting the banner and
	  policy options on raw printers and classes (STR #2238)
	- The socket backend now reads any pending back-channel
	  data before shutting down the socket (STR #2325)
	- Added a new ErrorPolicy directive in the cupsd.conf
	  file (STR #1871)
	- Printers that use JCL options are now exported to Samba
	  correctly (STR #1985)
	- The IPP backend now relays printer-state-message values
	  from the server to the client (STR #2109)
	- Added support for the PWG printer-alert and
	  printer-alert-description attributes (STR #2088)
	- Added support for LPD "stream" mode (STR #2036)
	- The scheduler now reports the PostScript product string
	  from PPD files in CUPS-Get-PPDs responses (STR #1900)
	- Raw printing with queues pointing to the file pseudo-
	  device and multiple files and/or banners now works (STR
	  #1933)
	- Added new public cupsAdminGetServerSettings() and
	  cupsAdminSetServerSettings() APIs.
	- Added new "makebuttons" script in the "tools" directory
	  for creating web interface buttons (STR #2231)
	- Added support for DNS-SD (aka "Bonjour") printer sharing
	  (STR #1171)
	- Job operations (cancel, hold, release, etc.) from the
	  web interface now return back to the original page (STR
	  #2239)
	- The classes or printers list is now shown after a
	  successful deletion from the web interface (STR #1999)